@@ -8,10 +8,11 @@
 #include "ghit.h"
 
 // Constructor
-G4GRun::G4GRun(GOptions* gopt, map<string, GDynamic*> *gDigitization) :
+G4GRun::G4GRun(GOptions* gopt, map<string, GDynamic*> *gDigitization, map<string, GMedia*> gmedia) :
 G4Run(),
 GFlowMessage(gopt, "GRun"),
-gDigitizationGlobal(gDigitization)
+gDigitizationGlobal(gDigitization),
+gmediaFactory(gmedia)
 {
 	flowMessage("GRun:Constructor");
 	runData = new vector<GEventData*>;
