@@ -8,6 +8,7 @@
 #include "g4volume.h"
 #include "gSensitiveDetector.h"
 #include "gruns.h"
+#include "gmedia.h"
 
 // define all gemc options
 map<string, GOption> defineOptions()
@@ -19,15 +20,15 @@ map<string, GOption> defineOptions()
 
 	optionsMap["gui"] = GOption("Use the QT interface", 1, "gui");
 	optionsMap["gui"].addHelp("Possible choices are:\n");
-	optionsMap["gui"].addHelp("0: run the program in batch mode\n");
-	optionsMap["gui"].addHelp("1. run the program in interactive qt mode\n");
+	optionsMap["gui"].addHelp(string(GOPTIONITEM) + "0: run the program in batch mode\n");
+	optionsMap["gui"].addHelp(string(GOPTIONITEM) + "1: run the program in interactive qt mode\n");
 
 	optionsMap["nthreads"] = GOption("Number of threads to use", 0, "control");
 	optionsMap["nthreads"].addHelp("0: use all available threads (default)\n");
 
 	optionsMap["g4command"] = GOption("Execute G4 command.", "no", "geant4", "true");
-	optionsMap["g4command"].addHelp("Examples:\n");
-	optionsMap["g4command"].addHelp("/vis/scene/add/axes 0 0 0 20 cm\n");
+	optionsMap["g4command"].addHelp("Example:\n");
+	optionsMap["g4command"].addHelp(string(GOPTIONITEM) + "/vis/scene/add/axes 0 0 0 20 cm\n");
 	optionsMap["g4command"].addHelp("This option can be repeated.\n");
 
 	optionsMap["gemcv"] = GOption("Gemc general Verbosity", 0, "verbosity");
@@ -39,8 +40,8 @@ map<string, GOption> defineOptions()
 
 	optionsMap["threadLog"] = GOption("Display messages from this thread only", 0, "verbosity");
 	optionsMap["threadLog"].addHelp("Default is thread id 0. Possible values:\n");
-	optionsMap["threadLog"].addHelp("#n thread id");
-	optionsMap["threadLog"].addHelp("-1 dsplay all");
+	optionsMap["threadLog"].addHelp(string(GOPTIONITEM) + "#n thread id\n");
+	optionsMap["threadLog"].addHelp(string(GOPTIONITEM) + "-1 dsplay all\n");
 
 	optionsMap["softwareVersion"] = GOption("softwareVersion", GEMC_VERSION, "version");
 
@@ -52,6 +53,7 @@ map<string, GOption> defineOptions()
 	optionsMap += GSensitiveDetector::defineOptions();
 	optionsMap += GRuns::defineOptions();
 	optionsMap += GFlowMessage::defineOptions();
+	optionsMap += GMedia::defineOptions();
 
 	return optionsMap;
 }
